my-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-declarative-pod
spec:
  containers:
  - name: nginx
    image: nginx
